src/chrome/komodo/skin/komodo.css
/* ***** BEGIN LICENSE BLOCK *****
 * Version: MPL 1.1/GPL 2.0/LGPL 2.1
 * 
 * The contents of this file are subject to the Mozilla Public License
 * Version 1.1 (the "License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 * http://www.mozilla.org/MPL/
 * 
 * Software distributed under the License is distributed on an "AS IS"
 * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
 * License for the specific language governing rights and limitations
 * under the License.
 * 
 * The Original Code is Komodo code.
 * 
 * The Initial Developer of the Original Code is ActiveState Software Inc.
 * Portions created by ActiveState Software Inc are Copyright (C) 2000-2007
 * ActiveState Software Inc. All Rights Reserved.
 * 
 * Contributor(s):
 *   ActiveState Software Inc
 * 
 * Alternatively, the contents of this file may be used under the terms of
 * either the GNU General Public License Version 2 or later (the "GPL"), or
 * the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
 * in which case the provisions of the GPL or the LGPL are applicable instead
 * of those above. If you wish to allow use of your version of this file only
 * under the terms of either the GPL or the LGPL, and not to allow others to
 * use your version of this file under the terms of the MPL, indicate your
 * decision by deleting the provisions above and replace them with the notice
 * and other provisions required by the GPL or the LGPL. If you do not delete
 * the provisions above, a recipient may use your version of this file under
 * the terms of any one of the MPL, the GPL or the LGPL.
 * 
 * ***** END LICENSE BLOCK ***** */
@import url("chrome://global/skin/");
@import url("chrome://komodo/skin/unifiedWindow.css");  /* only exists on Mac */
@import url("chrome://komodo/skin/splitter.css");


/* ::::: fullscreen window controls ::::: */

#window-controls {
  -moz-box-align: center;
  padding: 0 2px 0 4px;
}

#minimize-button {
  list-style-image: url("chrome://global/skin/icons/Minimize.gif");
}

#restore-button {
  list-style-image: url("chrome://global/skin/icons/Restore.gif");
}

#close-button {
  list-style-image: url("chrome://global/skin/icons/Close.gif");
}

toolbar[printpreview="true"] {
  -moz-binding: url("chrome://global/content/printPreviewBindings.xml#printpreviewtoolbar");
}
/* don't show empty toolbars */
#main-toolboxrow > toolbar:empty {
  display: none;
}

#noPreviewAvailable 
{
  background-color: white !important;
  font-size: 12px !important;
}
 
/* ::::: tooltip :::::
  copied from popup.css, but modified to be a class rather than
  element name.  */

popup[type="tooltip"] {
  -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#kotooltip');
  -moz-appearance: tooltip;
  margin-top: 11px;
  border: 1px solid InfoText;
  padding: 2px 3px;
  max-width: 40em;
  background-color: InfoBackground;
  color: InfoText;
  font: message-box;
}

.tooltip-label {
  margin: 0px !important;
}

statusbarpanel[highlite="true"] {
  margin: 0px;
  padding: 0px;
}

statusbarpanel[highlite="true"] > label {
  color: highlighttext;
  background-color: highlight;
  margin: 0px 0px 0px 0px;
  padding: 1px 10px 2px 10px;
}

menu.statusbar-label > label,
menuitem.statusbar-label > label
{
  font: status-bar;
  text-align: left;
}
statusbarpanel > toolbarbutton[type="menu"] {
  padding: 0px;
  margin: 0px;
  border-style: none !important;
  -moz-appearance: none;
}
statusbarpanel > toolbarbutton > .toolbarbutton-text {
  font: status-bar;
  text-align: left;
  padding-left: 6px;
  padding-right: 2px;
}
statusbarpanel > toolbarbutton[type="menu"] > dropmarker {
  /*
   The moz appearance is necessary to override the additional image provided
   by the toolbarbutton menu image (provided through a xbl binding).
   http://bugs.activestate.com/show_bug.cgi?id=79320
  */
  -moz-appearance: none !important;
  list-style-image: url("chrome://komodo/skin/images/menupopup_arrows.png");
}


.primary_menu_item {
    font-weight: bold;
}

.thin-inset-border,
.thin-outset-border,
.zero-space {
    margin: 0px;
    padding: 0px;
}

.no-border {
    margin: 0px;
    padding: 0px;
    border: none;
}

.blank-workspace {
    margin: 0px;
    padding: 0px;
    background-color: appworkspace;
}


/* groovy separator (0 padding, for dividing effects)
   XXX This was the only thing needed from the old KomodoDialog.css. Should
       this be in its own dialog.css?
*/
separator.groovy-thin
{
    border-top: 1px solid threedshadow;
    border-bottom: 1px solid threedhighlight;
    height: 0px;
}

/* add some exra space between a tab icon and the tab text */
tab > .tab-text {
  padding-left: 3px;
  padding-right: 3px;
}

